更新显示器名词，复习并更新多线程

--- a/docs/hardware/显示器设备.md
+++ b/docs/hardware/显示器设备.md
@@ -157,7 +157,7 @@ OLED 目前（2025-3）只做高端显示器和高端电视，国内厂商（京
 
 （2）寿命问题。由于是有机物，长时间发光后变性，尤其以高能亮的蓝色像素为最。长期显示相同内容，会导致"烧屏"问题，厂家会采取抖动等技术缓解
 
-（3）PPI 缩减、字体边缘异色。传统 LCD 一个像素为 R+G+B 的正方形，三均分。而 OLDE 分子由于寿命等原因，一般两个蓝色对应一个红绿，并按照"钻石排列"等方式排列，因此，同分辨率同屏幕大小，PPI 不如 LCD（如果是钻石排列那种排列的话）。并且字体边缘（如一条横线）无法准确的分割两个像素，需要算法来借用不同的像素，导致彩边（此问题在 2K27 寸 OLED 上尤为明显）
+（3）PPI 缩减、字体边缘异色。传统 LCD 一个像素为 R+G+B 的正方形，三均分。而 OLED 分子由于寿命等原因，一般两个蓝色对应一个红绿，并按照"钻石排列"等方式排列，因此，同分辨率同屏幕大小，PPI 不如 LCD（如果是钻石排列那种排列的话）。并且字体边缘（如一条横线）无法准确的分割两个像素，需要算法来借用不同的像素，导致彩边（此问题在 2K27 寸 OLED 上尤为明显）
 
 （4）总体最大亮度不够高，借助于有机物发光，无法媲美背光板的高亮度
 
@@ -189,7 +189,7 @@ MiniLED 也是分三种，但是其实没人用 TN，因此它可以搭配 VA、
 
 WOLED：
 
-用发出白色光的 OLDE 像素，上面覆盖 RGB+W（白色）四种膜来区分颜色
+用发出白色光的 OLED 像素，上面覆盖 RGB+W（白色）四种膜来区分颜色
 
 直出白色可以解决亮度低的问题，蓝色膜可以解决蓝色像素衰减问题。然而，红绿的色彩不够纯净，色域低，高亮度下尤为明显
 
@@ -205,7 +205,11 @@ HVA：
 
 RGB-MiniLED：
 
-额，国内的 MiniLED 电视都叫这个，其实好像就是 MiniLED
+国内厂商为了解决色域问题，就是把 MiniLED 的背光灯珠，从一颗白的，换成 RGB 三色
+
+SQD-MiniLED：
+
+S 是 Super，和 QD-QLED 一样，也是蓝色 OLED 灯珠，但是激发一个“超级”量子点膜，以便于形成白光。对比 QD-OLED，色域更广
 
 双层 OLED：
 
@@ -217,7 +221,7 @@ RGB-MiniLED：
 
 ### ltps ltpo
 
-这是 OLDE 每个像素开关的材料
+这是 OLED 每个像素开关的材料
 
 S 表示硅，O 表示有机物
 
@@ -289,9 +293,9 @@ HDRVivid：我们国家自研 HDR，避免授权费
 
 如果你的电脑没有开启 HDR，那么你用 chrome、mpv 等播放器播放 真 HDR 视频，那么颜色并不会发生混乱，因为这些播放器给你自动做了颜色转换。一般这种情况下不会出现问题
 
-### HDR 模式观看 SDR 视频，或使用非SDR应用（如桌面）
+### HDR 模式观看 SDR 视频，或使用非 SDR 应用（如桌面）
 
-在 Win10 上， HDR 设置里有一个滑块。可以控制将白色映射到多亮的亮度，你可以调低让它没那么亮。
+在 Win10 上，HDR 设置里有一个滑块。可以控制将白色映射到多亮的亮度，你可以调低让它没那么亮。
 
 一般这个滑块处于中间位置时，我个人认为桌面会比较亮
 
@@ -299,26 +303,26 @@ HDRVivid：我们国家自研 HDR，避免授权费
 
 但由于 UI（白色窗口）被滑块推到了极高亮度，相比之下，遵循标准亮度的 SDR 视频就会显得非常“阴暗”或“无力”
 
-在这种情况下，你用chrome或者npv观看SDR视频，其实显示的内容是对的，因为它就那么暗，就是100nit
+在这种情况下，你用 chrome 或者 npv 观看 SDR 视频，其实显示的内容是对的，因为它就那么暗，就是 100nit
 
-但是，chrome似乎还有先进机制，说是能平衡全局亮度。就是你在chrome上看b站YouTube的SDR视频（右键显示为bt709），它亮度和旁边白色UI也是一致的
+但是，chrome 似乎还有先进机制，说是能平衡全局亮度。就是你在 chrome 上看 b 站 YouTube 的 SDR 视频（右键显示为 bt709），它亮度和旁边白色 UI 也是一致的
 
-其实网上都建议换Win11，不过我手头没Win11机器，Win10的不合理
+其实网上都建议换 Win11，不过我手头没 Win11 机器，Win10 的不合理
 
-### obs录制HDR视频（桌面）
+### obs 录制 HDR 视频（桌面）
 
 TODO
 
 ### 白色区域亮度发生改变
 
-当你播放一个黑色的视频时，旁边白色的UI变暗（相比于全白UI）？
+当你播放一个黑色的视频时，旁边白色的 UI 变暗（相比于全白 UI）？
 
 按照 HDR 的理想标准，白色部分的亮度应该保持不变（即“绝对亮度”原则）
 
 然而实际情况是：
 
-OLED有ABL机制，全局总功率一定，只有小区域白能非常亮（这解释不了这个问题）
+OLED 有 ABL 机制，全局总功率一定，只有小区域白能非常亮（这解释不了这个问题）
 
-MiniLED有控光，但是不是像素级，在黑白交接的分区，它需要50%的光，但是如果它这样直接一刀切，可能会导致你黑视频一圈的白色暗，更远的白色亮
+MiniLED 有控光，但是不是像素级，在黑白交接的分区，它需要 50% 的光，但是如果它这样直接一刀切，可能会导致你黑视频一圈的白色暗，更远的白色亮
 
 所以算法会让它渐变，远的白色也一起暗
