AI外围生态体验

--- a/docs/LLM/基本概念.md
+++ b/docs/LLM/基本概念.md
@@ -14,9 +14,15 @@ SBERT 本身是于 2019 年提出一个方法
 
 #### sbert 和 BGE-M3 的关系
 
-BGE-M3 采用更先进的预训练模型（如 RoBERTa、ERNIE、DeBERTa）作为基座
+BGE-M3 采用更先进 BGE 作为基座。类似还有 RoBERTa、ERNIE、DeBERTa
 
 "用 SBERT 做嵌入"，在实践中可能就是用 BGE、E5、GTE 等基于相同原理的现代模型
+
+大模型的基座是指 Decoder-Only，它从海量资料里学习，成为全能的学者，但是不会回答问题，比如 Llama3 qwen
+
+嵌入模型基座是 Encoder-Only
+
+下一个趋势是，把大模型的生成头去掉，当作嵌入模型
 
 #### 向量长度
 
