--- a/docs/LLM/生态.md
+++ b/docs/LLM/生态.md
@@ -69,6 +69,14 @@ discription: 把 runtime 下面的 XML 备份起来
 
 这东西我感觉有点傻，但是可能确实有用吧。我认为直接抄别人的 SKILL 是比较好的，不要自己写，但是门槛比较低，这东西执行你 python 的时候，我估计错误处理啥的也是个问题。精准还得是 MCP，但是专用 MCP 非程序员不好写，我看 Cherry Studio 里也提供现成的 MCP
 
+[2026-1-30]
+
+最近，我需要做年终总结 PPT。虽然我知道很多 AI 都能做，但是我考虑到付费以及本身我没怎么用过写 PPT 的功能。
+
+我就萌生了一个点子：我写 markdown，让 AI 总结为符合 PPT 的 markdown，再用前端相关工具转换为 PPT 或者网站。我一问 Gemini，果然有类似工具，于是我选用的 Slidev。
+
+然后我发现 Slidev 它官网提供一个 Skills，我把那个 Skills 拿到仓库里，搭配 OpenCode 使用，模型是 ds，写了一会，一次就跑起来了，然而只是内容可以，动画/界面效果几乎没有。虽然加载了 skills，可能 ds 遵循指令的能力不行，或者是本身 slidev 就小众，反正还不如用那些现成的服务。
+
 ### n8n
 
 [2026-1-19]
@@ -102,3 +110,81 @@ discription: 把 runtime 下面的 XML 备份起来
 之前试过 QwenCode，但是它只局限于 Qwen，今天试了一下 OpenCode，基本上和 QwenCode 类似，我调的 OpenAI 的模型，跑了个小 Demo
 
 感觉 OpenCode 的意义不是特别大？和我用 Zed 编辑器直接唤起 AI 对话框，然后 AI 就能直接操作了
+
+我看网上有人说 OpenCode 很好用，他用了很久，QwenCode 是最垃圾的，ClaudeCode 最强
+
+我感觉 OpenCode 似乎有一个 linux 命令解释器，反正 AI 运行命令的问题很小，要是 VSCode 去弄，经常 AI 命令不是 Windows 的
+
+[2026-1-30]
+
+我对比了一下这些工具，我分为四类
+
+（1）VSCode 本身+各种插件
+
+各种插件毕竟是第三方的，可能结合不是那么美好（其实就是内嵌一个网页，高分辨率下，很多字体大小都不统一）
+
+（2）VSCode 分叉版
+
+Cursor 刚火的时候试过。我看 Cursor 应该是有点黑科技的，尤其是读他们的博客。应该是内置了很编译器数据库，据说是先跑小模型理解你的意愿，再找内容，输入给 AI 要看的内容很准，也省 Token。
+是的，你想，Cursor 本身也是调 Claude（抛开价格优势），那为什么不买 API 再用 VSCode 插件呢？说明还是有东西
+
+Trae 半年前试过
+
+Antigravity Google 出的，目标是多 Agent 同时协作。我没下载。我看 reddit 上的评价不是特别好？目标群体是那种顶级 AI Boy，依靠十几个 AI 协作，每天上万行代码，甚至无法人工 review 的极客
+
+（4）Zed
+
+应该是没有 Cursor 那种黑科技的，但是 AI 确实内置到了侧栏。和 IDE 内置的类似，也是通过查看文件的方式（虽然可以读取一部分行，但是我看 AI 很多时候倾向于一直看，看到结束）来工作
+
+（5）命令行
+
+比如 Claude Code、Codex、Qwen Code、Gemini CLI、Open Code
+
+这类工具的思路是，给 AI 提供 MCP 工具，让 AI 真正的像人类一样，先 ls 查看项目结构，然后再 grep 查看关键点
+
+总结：受限于训练成本，大模型本身确实是 AI 时代的护城河。但是外围生态有点隐约成为城墙的趋势。现在一看模型答题评分都巨高，但是实际体验确实是有差距。
+
+### Browser-Use
+
+[2026-1-26]
+
+Gemini 推荐我尝试的玩具，类似 OpenAI Operator，Anthropic Computer Use
+
+这个项目的文档还不错（也许是需要写的代码很少）
+
+我尝试了一下，配置的模型是 qwen-vl-max
+
+外观上看起来像是一个超级大型的提示词工程
+
+(1)
+任务是 "访问 https://t.bilibili.com 然后列出谁正在直播。"
+
+我的意图是用我真实的浏览器 通过 JWT 让它能访问我自己的动态页，在左边观察谁在直播
+
+执行了一下，它是启动了浏览器，也能点击，但是没有我的 JWT，然后它尝试用 live.bilibili.com 找，把这个界面打开了好几次，最后失败了
+
+检查了一下似乎路径的位置是对的，但是不知道为什么不行
+
+(2)
+任务是 "访问 Github 上 wosnxuw/vite-notes 这个仓库，检查最后一次的 Actions 是否成功"
+
+因为这个事情不需要登录，它成功了
+
+可以看到是有任务规划的，并且会整理为 Memory 避免上下文过长
+
+```
+INFO     [Agent] 🎯 Task: 访问 Github 上 wosnxuw/vite-notes 这个仓库，检查最后一次的 Actions 是否成功
+INFO     [Agent] 📍 Step 1:
+INFO     [Agent]   🎯 Next goal: Navigate to the GitHub repository page for wosnxuw/vite-notes.
+INFO     [Agent] 📍 Step 2:
+INFO     [Agent]   🧠 Memory: Visited the GitHub repository page for wosnxuw/vite-notes. The repository is public, and the latest commit was made 2 hours ago. The next step is to check the Actions tab to determine the status of the latest GitHub Actions workflow.
+INFO     [Agent]   🎯 Next goal: Click on the 'Actions' tab to view the GitHub Actions workflows for this repository.
+INFO     [Agent]   ▶️   click: index: 1614
+INFO     [tools] 🖱️ Clicked a "Actions" id=actions-tab
+
+📄  Final Result:
+已访问 GitHub 仓库 wosnxuw/vite-notes，并检查了最新的 Actions 状态。最新的一次运行（Run #11）成功完成，状态为 'Success'，总耗时 38 秒。该运行包含 
+两个作业：build（21 秒）和 Deploy（9 秒），均成功执行。部署的网站地址为 https://wosnxuw.github.io/vite-notes/。
+```
+
+嗯，我看了下，OpenAI 和 Anthropic 在工作流这一块东西还挺多的
