--- a/docs/Linux/桌面.md
+++ b/docs/Linux/桌面.md
@@ -1,6 +1,34 @@
 
 https://distrochooser.de/zh-hans
 
+### 发行版
+
+Debian -> Ubuntu 前者是最早的社区发行版，后者是前者的迭代  包管理是 APT
+
+CentOS 是 Red Hat 基于 RHEL 的免费版，不带商业支持。包管理是 rpm
+
+2024 年 6 月 30 日停止维护 CentOS 7，届时 CentOS 全系列版本将停止维护
+
+CentOS Stream 作为 CentOS 项目新的成员，旨在滚动更新版
+
+统信 UOS：基于深度 Deepin，Deepin 基于 Debian
+
+中科方德：似乎也是 Debian 系的？反正能用 apt
+
+### Shell Bash Terminal
+
+Terminal：终端相当于一个程序，一个窗口。比如 Win11 的那个新终端，它只是一个 Terminal，给用户操作。
+
+Shell：是用户键入的命令的解释器，**本身并不具体指代哪一种**
+
+Bash：Linux 下最常见的 Shell，也就是 Shell 的具体实现
+
+Cmd、PowerShell：Windows 上的两个 Shell
+
+Zsh：另一个 Unix 上的 Shell。MacOS 切换到 Zsh 上，使得越来越多的人用这个 Shell，很多发行版默认是 Bash，但是也给你安装了 Zsh。
+
+Git Bash：Git for Windows，用 MSYS2 还是什么的，做了一个模拟兼容层，模拟 bash。所以它本事是一个 Shell
+
 ### 桌面环境 DE
 
 **X Window System 或 Wayland**：这是图形显示的基础。X Window System（通常称为 X11）是传统的显示服务器，而 Wayland 是现代替代品。它们负责管理图形显示、输入设备等。
@@ -43,6 +71,10 @@ netstat、ss 这个对于我来说，就是端口管理工具
 
 ss 更现代一些，我这个 openSUSE 甚至没有 netstat，只有 ss
 
+其实还有一个叫做 lsof 的命令，用于列出打开的文件（一切皆文件的话，端口也是文件）
+
+`lsof -i :80`
+
 ### 防火墙
 
 iptables Linux 内核里的防火墙，但是用起来麻烦。在老的发行版上，就是内核；在新的发行版上，内核是 nftables，iptables 则是一个假命令，兼容层，转给其它命令处理
@@ -76,3 +108,64 @@ systemctl 是 systemd 的控制工具
 `systemctl is-enabled xxx` 返回 0 是有开机自启（但不一定当前就在工作）
 `systemctl status xxx` 现在是否在跑
 `systemctl start xxx` 跑起
+
+### 变量
+
+在 SHELL 中
+
+定义变量：
+
+```shell
+MYVAR=a
+```
+
+右值的字符串可以用单引号，也可以用双引号，也可以不用引号
+
+变量名建议大写，等号左右**建议无空格**
+
+使用变量：
+
+```
+$MYVAR
+${MYVAR}
+```
+
+### 环境变量
+
+那么环境变量也是一种变量，叫做 PATH
+
+查看环境变量
+
+```shell
+echo $PATH
+```
+
+Linux 环境变量分为：
+
+永久的：需要用户修改相关的配置文件，变量永久生效
+
+临时的：利用 export 命令，在当前终端下声明环境变量，关闭 Shell 终端失效
+
+添加变量的姿势：
+
+PATH=$PATH:（需要添加的环境变量） 进行拼接
+
+PATH=（需要添加的环境变量） 将会覆盖之前的变量
+
+### 文件夹
+
+```shell
+cd a
+cd a/
+cd ./a
+cd ./a/
+```
+
+第一种系统会自己找，第二种明确告诉系统是一个目录，第三种明确在这里找，而不是找环境变量。
+
+```shell
+cd /a #错误
+cd /usr/local
+```
+
+实际上 / 是一个路径，/usr/local 是真实存在的。而 / 下没有 a 这个文件夹
