fix build error

--- a/docs/C&C++/字符集.md
+++ b/docs/C&C++/字符集.md
@@ -138,7 +138,7 @@ TCHAR 等宏的解释方式，以及 API 调用（比如底层调用 MessageBoxW
 
 ### 固有宏
 
-和 TCHAR 有关的宏在 #include <tchar.h> 中 （这玩意是一个 windows 特有的）
+和 TCHAR 有关的宏在 #include `<tchar.h>` 中 （这玩意是一个 windows 特有的）
 
 **可变类型宏：**
 
@@ -219,8 +219,9 @@ TEXT 的用法和 T 完全一致，可以替换。只不过只适用于 Windows
 
 头文件的引入是`#include <string>`，不存在`<wstring>`，string 中定义了 string 和 wstring。这两个的关系是
 
->typedef basic_string<char> string;
->typedef basic_string<wchar_t> wstring;
+>`typedef basic_string<char> string;`
+
+>`typedef basic_string<wchar_t> wstring;`
 
 除此之外还有 u16string 和 u32string，这里按下不表。
 
@@ -230,11 +231,11 @@ TEXT 的用法和 T 完全一致，可以替换。只不过只适用于 Windows
 
 CString 是 MFC 的字符串类型
 
-引入 \#include <afx.h> 这是 MFC 的基本类，包括 CString。但是无法跨平台。
+引入 `#include <afx.h>` 这是 MFC 的基本类，包括 CString。但是无法跨平台。
 
-而 #include <afxwin.h> 则更多和窗口有关系，用来写完整的 MFC 程序
+而 `#include <afxwin.h>` 则更多和窗口有关系，用来写完整的 MFC 程序
 
-#include <stdafx.h> 是一个预编译头文件，VS2017（不含）以后换成 pch.h
+`#include <stdafx.h>` 是一个预编译头文件，VS2017（不含）以后换成 pch.h
 
 CString 是一个基于 TCHAR 的类，并提供了字符串的常见算法，以及重载了+号
 
