--- a/docs/hardware/相机.md
+++ b/docs/hardware/相机.md
@@ -244,10 +244,12 @@ So，数字越小，光圈越大。
 
 单反相机里面有一面镜子，微单相机里面没有这面镜子。光线进来以后，会将画面矫正为正常画面。而微单是直接给颠倒画面，通过计算来矫正。
 
-基本上现在看到的都是微单，就是镜头拿下来后，直接露出 CMOS 那种，单反已经基本上不发展了。
+基本上现在都是微单，就是镜头拿下来后，直接露出 CMOS 那种，单反已经基本上不发展了。少数专业领域用。
+
+单反相机更厚，然后头上有一个五棱镜突起。
 
 全画幅：全画幅指的是相机内部图像传感器的物理尺寸，它传统上与 35mm 胶片（36mm × 24mm）的成像面积完全相同。
 
 APS-C 画幅：约 24mm × 16mm，消费级常见。
 
-潜望式：其实就是手机长焦不够厚，那么就纵向搞
+潜望式：其实就是手机长焦不够厚，那么就纵向搞，换个走向。
