图形学更新

--- a/docs/OpenGL/光栅化.md
+++ b/docs/OpenGL/光栅化.md
@@ -1,97 +1,135 @@
-光栅化 Rasterization：把 3D 物体实时的显示在计算机屏幕上的过程
+### 数学基础
 
-实时：至少 30fps
-
-点积：用于求夹角，以及一个向量在另一个向量上的投影，或者说做分解
+点积：用于求夹角，以及一个向量在另一个向量上的投影，或者说做分解。
 
 叉积：用于区分内外，左右。eg：一个向量在另一个的左还是右，一个点在三角形内（三次叉积同向） 
 
-齐次坐标：通过对向量增加一个维度，使得不需要额外添加平移矩阵，而是直接用乘法就能乘出平移
+齐次坐标：通过对向量增加一个维度，使得不需要额外添加平移矩阵，而是直接用乘法就能乘出平移。
 
-变换：常见的有平移旋转放缩
+变换：常见的有平移、旋转、放缩。
 
-绕原点旋转：如果我们会绕原点旋转，那么如果下一个旋转不在原点，我们可以把所有东西平移到原点，然后转，再移动回来
+绕点旋转：已知我们已经会做绕原点旋转。如果下一个旋转不在原点，我们可以把旋转点先平移到原点，然后转，再移动回来。
+
+### 光栅化
+
+光栅化 Rasterization：把 3D 物体实时的显示在计算机屏幕上的过程
+
+实时：至少 30 fps
+
+### 相机
 
 相机：（相机需要三个东西才能定义）
+
 1、位置
+
 2、上方向（不仅仅需要视线，是因为比如我拿着相机了，我还可以上下颠倒相机）
+
 3、视线
+
 （说是三个，但其实一个位姿矩阵就可以定义出，实际上相机就相当于一个人的眼，也是需要这三个方向）
 
 简化：
 
-我们用平移法，将相机移动到原点，上方向为 Y
-看向-Z（右手系）
-为什么看向-Z，因为要模拟人眼，当 Z 轴指向屏幕外，那么你的人眼看纸张，就是刚好看-Z 方向嘛
+我们用平移法，将相机移动到原点，上方向为 Y，看向 -Z（右手系）
+
+为什么看向 -Z，因为要模拟人眼，当 Z 轴指向屏幕外，那么你的人眼看纸张，就是刚好看 -Z 方向
+
+### 成像原理
+
+图形学的成像，类似小孔成像。
+
+相机就相当于现实世界里小孔成像的小孔。
+
+根据光路可逆性，实际上是从屏幕上的每一个像素点射出一条光线，经过小孔，打到虚拟世界中的一个物体的表面上，观察其颜色。
+
+屏幕距离小孔的距离决定了 FOV，如果把屏幕替换为你的眼睛，那么很显然，你距离小孔越近，你能看到的范围也就越大。
+
+其实再思考一下，屏幕实际上也在虚拟世界里有一个位置的。
+
+### 视图变换
 
 模型视图变换：模型全部移动到相机在原点时的相对位置
 
-正交投影：假设相机离得无限远（实际上有点类似 正视图？）
+**透视投影**：相机是一个点，形成一个锥。好比我们前面说的小孔成像原理。
 
-透视投影：摄像机是一个点，形成一个锥
+透视形成的根源是距离物体的远近，导致物体在视野里所占的角度发生了变化。它和凸透镜没有必然关联。
 
-我不是很理解透视投影形成的原理，所以我这里再加深一下
+人眼类比的话，晶状体是一个凸透镜，成像平面是视网膜。和单反相机类似，镜头组是凸透镜，成像平面是 CMOS。但是计算机图形学里，它是类似小孔成像，所以并不好直接对比。
 
-首先人眼是一个透视投影，这个应该是生理结构决定的
+近大远小本质就是近的物体，在视锥体的，所占的角度更大（通过三角函数）。
 
-眼睛的视网膜，约等于图形学里的屏幕，就是绿色的部分，也就是人的大脑感知的东西
+**正交投影**：假设相机离得无限远。
 
-摄像机似乎没有对应的生理结构，相当于大脑的感知
+正交投影理解：
 
-然后按照这幅图，假装屏幕前有一个倾斜的平面物体，则投影后，近的会更大，远的会更小
+如果你硬要在此处找一个屏幕的话，那么屏幕也是在无穷远，因为无穷远，所以光线经过小孔依然平行。
 
-![projection](assets/projection.png)
+其实正交投影类似于平行光线/太阳光线打到物体上，或者一个液压机将物体压扁。
 
-正交：按照相机在原点，看向-Z，你直接把物体的 Z 值扔掉，就是投影了（不考虑物体的前和后）
+按照相机在原点，看向 -Z，你直接把物体的 Z 值扔掉，就是正交投影了（不考虑物体的前和后），类似丢掉一个维度（因为本质是物体的深度，即离你的远近，决定了透视关系种的占比的角度）
+
+### MPV 变换
 
 不考虑旋转，通过平移和缩放，把空间中任意一个长方体，变换到原点的标准正方体
 
 这三步，称之为** MVP **变换
 
-1、Model 模型变换：确定模型在世界中的位置
+1、Model 模型变换：确定模型在世界中的位置。这一步其实就是获取世界坐标系，因为很多物体都只记录基于父亲的局部坐标，需要把它们乘起来。【世界坐标】
 
-2、View 视图变换，顶点从世界空间变换到观察空间（相机空间），将所有物体转换到以相机为原点的坐标系中
+2、View 视图变换：顶点从世界原点变换到观察空间（相机空间），将所有物体转换到以相机为原点的坐标系中。即求相对摄像机的位置。【观察坐标】
 
-3、Projection 投影变换，定义可视区域和投影方式，为后续透视除法和裁剪做准备
+3、Projection 投影变换：将观察坐标转换为裁剪坐标。定义可视区域，并将 3D 坐标压扁到 2D 平面上。通常分为透视投影和正交投影。【裁剪坐标】
 
-透视：
-
-近和远的两个平面，近的平面小，远的平面大
-
-近平面永远不变，远平面挤压成和近的一样大，远的 Z 不变，只是向里收缩
-
-远平面的中心不变
-
-什么意思：你可以把近平面想象成你的显示器，你就是摄像机，你在显示器上看到的物体
-
-就是显示器后面物体，做透视投影的东西
+### 可视区域
 
 视锥定义：
 
-因为我们之前的绿色平面是随便画的，但是现实情况是它又有一个比例
+视锥体是只能在透视投影里用。因为小孔成像，所以视锥顶点相当于相机。
 
-长宽比
+视景体定义：
 
-fov：在垂直方向上，最上和最下的夹角（游戏里可能是水平的，两者可以互相求）
+视景体是只能在正交投影里用。类似于一个长方体，相当于直接从虚拟屏幕上，每个像素发射平行光线。
 
-屏幕的定义：
+长宽比：屏幕的 16：9 这种参数
+
+fov：在垂直方向上，最上和最下的夹角，这跟角度一般在 50~60（FPS 游戏里可能是水平的，因为 FPS 里很多 fov 都在 100 左右，两者可以互相求。所以 FPS 游戏是透视投影，也只有透视投影才有 fov。）
+
+### 裁剪平面
+
+无论是视锥体和视景体，都不是无限的。它都是有限长方体或者平头锥体，具有远近两个裁剪平面。
+
+我们之前提到，我把虚拟屏幕放在了小孔后面，但是这样像是颠倒的。
+
+所以现实情况是，反而把屏幕放在了相机前面，类似相机作为一个“黑洞”，吸引了一下所有的物体表面的颜色，最后被屏幕这张白纸挡住。
+
+裁剪平面的存在，其根本原因是应对计算机世界，浮点数的精度有限。
+
+近裁剪平面，可以避开极其接近相机的三角形。远裁剪平面，可以避开离得特别远的三角形。从深度缓冲区来考虑，避免极远的物体深度过大。
+
+近裁剪平面：在第一人称里一般设置的很近，1cm，毕竟需要看武器（有时候物体和手套会关闭深度检测）。第三人称可能稍远。但是第三人称的摄像机和人物分离，如果你真能把相机紧贴在一个墙体后面，那确实能穿过。但是，相机外围有一个碰撞球，球的半径大于近裁剪平面，这导致还没出现异常，相机就闪开了。
+
+包括相机无法一直拉近角色面部，拉近到某种程度就卡住了。这也是为了近的精度不至于太多，远处崩了。
+
+### 视口变换
+
+屏幕定义：
 1. 像素的二维数组
 2. 具有分辨率
 3. 光栅化
 
-屏幕空间，左下角是原点。但是其实现实中，一个像素点的中心，应该在 (x+0.5,y+0.5) 这里
+屏幕空间，左下角是原点。但是其实现实中，一个像素点的中心，应该在 (x+0.5,y+0.5) 这里。
 
-现在的目标是：将标准正方体，画在屏幕上
+经过了 MPV 变换，你的内容已经在一个标准的正方体以内。现在的目标是：将标准正方体，画在屏幕上。（说是正方体，其实是两个正方形，一个是投影变换后的二维图形，另一个是深度缓冲区？）
 
 不管 z 向，只管 xy，拉伸到屏幕，称之为**视口变换**
 
-采样：
+### 采样、抗锯齿
 
-遍历屏幕里每个像素，取中心点，请问中心点在不在该现实的三角形内，在就显示，不在就不显示
+在图形学里，都是三角面片。你的三角面片经过 MPV 变换，压缩到一个标准正方形里。再缩放到和屏幕一样大。
 
-在不在内部，之前叉积已经提过了
+遍历屏幕里每个像素，取中心点，请问中心点在不在该显示的三角形内，在就显示，不在就不显示。
 
-->其实可以只采样三角形的包围盒内的点
+计算在不在内部，之前叉积已经提过了 -> 其实可以只采样三角形的包围盒内的点
 
 Aliasing（jaggies）
 
@@ -126,11 +164,14 @@ Artifacts：瑕疵。锯齿，摩尔纹，车轮效应
 并不是提高分辨率，实际上，为了性能，多个点可能复用
 
 MSAA
+
 AA 为 Anti Aliasing
+
+### 深度缓冲
 
 可见性问题：
 
-近的如何遮挡远的->深度缓冲，Z-buffering
+近的如何遮挡远的 -> 深度缓冲，Z-buffering
 
 一个笨办法是（画家算法）：先画远的，然后画近的，直接把远的盖住（覆盖）即可
 
@@ -156,6 +197,8 @@ AA 为 Anti Aliasing
 比如你去街上 10 个商店买最便宜的，你并不需要按顺序走完商店，只需要走完 10 个，记得哪个最便宜即可
 
 通过上面内容，我们已经可以渲染一个三角片了
+
+### 着色
 
 但是三角片一直是一个颜色（边缘通过反锯齿有渐变），但是总体还是一个颜色
 
@@ -243,45 +286,15 @@ Shading：着色
 
 把以上所有东西，模型，光照，渲染，合并到一起，叫做渲染管线
 
-管线：从场景到一个图，到底发生了什么
+### 管线
+
+从场景到一个图，到底发生了什么
 
 ![pipeline](assets/pipeline.png)
 
 第一步之所以是一些点，其实可能本身这些点是原来模型的顶点
 
 控制这个流程的东西，就叫做 shader
-
-还要注意他们可能混淆了光栅化和着色的顺序，或者觉得着色必须放在光栅化之后。需要说明现代 GPU 的灵活性，比如片段着色器在光栅化之后，但顶点着色在前，这样他们能明白流程的弹性。
-
-### 1. 光栅化
-
-**核心任务：** 将三维空间中的**图元**（主要是三角形）转换为二维屏幕上的**像素**。
-
-**过程描述：**
-
-1. **输入：** 经过顶点处理（如模型变换、视图变换、投影变换）后的顶点数据，这些顶点已经组成了三角形，并且位于一个标准化的裁剪空间内。
-2. **坐标转换：** 将裁剪空间中的顶点坐标转换为屏幕空间的二维坐标。
-3. **确定覆盖范围：** 对于屏幕上的每一个像素，判断它是否被某个三角形所覆盖。这个过程不是简单地画线，而是确定哪些像素的中心点落在三角形的内部。
-4. **输出：** 生成一系列**片段**。一个片段可以理解为一个“候选像素”，它包含了颜色、深度、纹理坐标等信息，但还没有最终成为屏幕上的像素。
-
-**简单比喻：**
-光栅化就像一个**模板切割器**。你给它一个三角形的图纸（顶点），它会在画布（屏幕）上精确地找出所有需要被这个三角形覆盖的格子（像素）。
-
-------
-
-### 2. 着色
-
-**核心任务：** 计算每个**片段**（由光栅化产生）的最终颜色。
-
-**过程描述：**
-
-1. **输入：** 光栅化阶段产生的**片段**，以及该片段所关联的各种数据，如顶点颜色、法线、纹理坐标、材质属性等。
-2. **应用光照和材质模型：** 根据场景中的光源信息（位置、颜色、强度）和物体表面的材质属性（漫反射、高光、粗糙度等），通过一个数学模型（如 Phong、Blinn-Phong 或更复杂的 PBR 模型）计算该点应该呈现的颜色。
-3. **纹理采样：** 根据片段的纹理坐标，从纹理贴图中获取颜色值，并将其应用到计算中。
-4. **输出：** 每个片段的最终颜色值。这个颜色值随后会经过一系列测试（如深度测试、模板测试），最终决定是否以及如何写入帧缓冲区，成为屏幕上我们看到的一个像素。
-
-**简单比喻：**
-着色就像一个**画家或上色师**。他拿到模板切割器（光栅化）标记好的那些格子，然后根据光照条件、物体的材质和图案（纹理），决定给每个格子涂上什么精确的颜色。
 
 shader 是一些硬件能够执行的东西
 
@@ -309,11 +322,13 @@ tiled 纹理（自复制无缝衔接）
 
 仅反射一次，计算简单
 
-光线追踪的原理：
+### 光线追踪
 
-由于光路的可逆性，假装从人眼发出光线
+原理：光路的可逆性。
 
-人眼作为光源，向屏幕中每个像素点做投影
+假装从人眼（摄像机）发出光线
+
+摄像机作为光源，向屏幕中每个像素点做投影
 
 然后，每次该光线打到一个物体上，都做局部平面做镜面反射（或折射）
 
